# stampfly_tof

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  README.md  README_EN.md
docs/: API.md  M5StamFly_spec_ja.md  VL53L3CX_doc_ja.md  VL53L3CX_driver_doc.md  i2c_master_api_analysis.md
examples/: README.md
examples/basic_interrupt/: CMakeLists.txt  README.md
examples/basic_interrupt/main/: main.c
examples/basic_polling/: CMakeLists.txt  README.md
examples/basic_polling/main/: main.c
examples/development/: README.md
examples/development/stage1_i2c_scan/: CMakeLists.txt  README.md
examples/development/stage2_register_test/: CMakeLists.txt
examples/development/stage3_device_init/: CMakeLists.txt  README.md
examples/stage1_i2c_scan/: CMakeLists.txt
examples/stage2_register_test/: CMakeLists.txt  README.md
examples/stage3_device_init/: CMakeLists.txt
examples/stage4_polling_measurement/: CMakeLists.txt  README.md
examples/stage5_interrupt_measurement/: CMakeLists.txt  README.md
examples/stage6_dual_sensor/: CMakeLists.txt  README.md
examples/stage7_teleplot_streaming/: CMakeLists.txt  README.md
examples/stage8_filtered_streaming/: CMakeLists.txt  README.md
exsampls/basic/: CMakeLists.txt  sdkconfig.defaults
exsampls/basic/main/: main.c
exsampls/interrupt/: CMakeLists.txt
include/: stampfly_tof.h  stampfly_tof_config.h  vl53l3cx.h  vl53lx_outlier_filter.h  vl53lx_platform_old.h
include/vl53lx/: vl53lx_platform.h  vl53lx_platform_user_data.h
src/: stampfly_tof.c  vl53l3cx.c  vl53lx_outlier_filter.c  vl53lx_platform.c
(+22 files in other folders)
